--- a/app/views/videos/index.html.slim
+++ b/app/views/videos/index.html.slim
@@ -1,1 +1,6 @@
-テスト
+.mainpage
+  h1 WhiteWall
+  p 戦うための戦略がここにある!
+  p こちらはストラテジーゲームプレイヤーを対象としたコミュニティサイトです。
+  p みんなで掲示板、動画などを利用して技術を向上させましょう!
+  input placeholder="動画を検索" type="text" /
