タイトル修正

--- a/app/views/videos/index.html.slim
+++ b/app/views/videos/index.html.slim
@@ -1,5 +1,5 @@
 .mainpage
-  h1 WhiteWall
+  h1 WhiteWonderWall
   p 戦うための戦略がここにある!
   p こちらはストラテジーゲームプレイヤーを対象としたコミュニティサイトです。
   p みんなで掲示板、動画などを利用して技術を向上させましょう!
