--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -3,7 +3,7 @@ header
     .left-bar__title
       = link_to root_path
         = image_tag "favicon.ico"
-        p WhiteWall
+        p WhiteWonderWall
   .right-bar
     .right-bar__about
       = link_to "About","/videos/about"
