--- a/app/assets/stylesheets/_user-show.scss
+++ b/app/assets/stylesheets/_user-show.scss
@@ -1,40 +1,49 @@
-.new-login{
+.user-show{
   background-image:  image-url("background.png");
   height: 100vh;
   width: 100%;
-  background-size:  cover;
-  display: flex;
-  justify-content: center;
+  background-size: cover;
+  font-size: 20px;
   padding-top: 50px;
-  .field{
+  .area{
     color: white;
-    font-size: 18px;
     padding-top: 50px;
-    height: 40px;
+    height: 60px;
     line-height: 40px;
-    width: 600px;
+    width: 900px;
     display: flex;
     justify-content: flex-end;
-    input{
-      width: 300px;
-      height: 30px;
+    .field{
+      display: flex;
+      justify-content: flex-end;
+      padding: 10px;
       border-radius: 10px;
-      padding: 4px 0px 0px 10px;
-      border: 2px solid rgb(135, 135, 135);
-      margin-left: 50px;
+      border: solid 3px #ffffff;
+      background-color: rgb(140, 124, 124);
+      &__user-data{
+        width: 250px;
+        display: flex;
+        justify-content: flex-end;
+      }
     }
   }
   .actions{
     padding-top: 120px;
-    input{
-      width: 600px;
+    width: 900px;
+    display: flex;
+    justify-content: flex-end;
+    a{
+      width: 300px;
       height: 40px;
+      line-height: 45px;
       border-radius: 10px;
-      background-color: rgb(81, 228, 81);
+      background-color: rgb(81, 228, 213);
       color: white;
       cursor: pointer;
       box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
-      border-bottom: solid 3px #16bc37;
+      border-bottom: solid 3px #16bcab;
+      display: block;
+      text-align: center;
       &:active {
         -webkit-transform: translateY(4px);
         transform: translateY(4px);
