掲示板用レイアウト追加

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,6 @@
 @import "./user-edit";
 @import "./create-editpage";
 @import "./wrapper";
+@import "./post-index";
+@import "./post-new";
+@import "./post-show";
