--- a/app/assets/stylesheets/_post-new.scss
+++ b/app/assets/stylesheets/_post-new.scss
@@ -19,12 +19,13 @@
   p{
     font-size: 24px;
     padding-top: 20px;
+    padding-bottom: 20px;
   }
   .content-field{
     &__radio{
       display: flex;
       justify-content: center;
-      margin-left: 34px;
+      padding-bottom: 5px;
       input{
         width: 55px;
         height: 30px;
