サイドバー追加

--- a/app/views/videos/index.html.slim
+++ b/app/views/videos/index.html.slim
@@ -4,4 +4,6 @@
   p こちらはストラテジーゲームプレイヤーを対象としたコミュニティサイトです。
   p みんなで掲示板、動画などを利用して技術を向上させましょう!
   input placeholder="動画を検索" type="text" /
+  = render "layouts/sidebar-left"
   = render "videos"
+  
