--- a/app/views/videos/show.html.slim
+++ b/app/views/videos/show.html.slim
@@ -9,7 +9,7 @@
       .video-show__concept__description__title
         = @video.title
       .video-show__concept__description__views-date
-        | 再生数#{@video.views}回・#{@video.created_at}
+        | #{@video.created_at}
       .video-show__concept__description__text
         = @video.description
   .news
