簡単ログイン レイアウト修正

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -11,7 +11,7 @@ header {
   z-index: 3;
   .left-bar{
     display: flex;
-    justify-content: space-between;
+    
     height: 15px;
     width: 150px;
     a{
@@ -29,20 +29,21 @@ header {
   }     
   .right-bar{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     height: 15px;
-    width: 360px;
+    width: 600px;
+    text-align: center;
     &__about{
-      
       width: 80px;
     }
+    &__easylogin{
+      width: 180px;
+    }
     &__login{
-
       width: 120px;
     }
     &__user{
-      width: 120px;
-   
+      width: 240px;
     }
   }
   a:hover { 
