--- a/app/assets/stylesheets/_devise.login.scss
+++ b/app/assets/stylesheets/_devise.login.scss
@@ -72,4 +72,29 @@
       }
     }
   }
+  .easylogin{
+    padding-top: 120px;
+    text-align: center;
+    width: 600px;
+    height: 40px;
+    a{
+      display: block;
+      width: 600px;
+      height: 40px;
+      line-height: 40px;
+      border-radius: 10px;
+      background-color: rgb(81, 228, 216);
+      color: white;
+      cursor: pointer;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.29);
+      border-bottom: solid 3px #16bc98;
+      &:active {
+        -webkit-transform: translateY(4px);
+        transform: translateY(4px);
+        box-shadow: 0px 0px 1px rgba(0, 0, 0, 0.2);
+        border-bottom: none;
+        cursor: pointer;
+      }
+    }
+  }
 }
