--- a/app/views/devise/registrations/edit.html.slim
+++ b/app/views/devise/registrations/edit.html.slim
@@ -2,26 +2,26 @@
   = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
     = render "devise/shared/error_messages", resource: resource
     .field
-      = f.label :ユーザー名
-      = f.text_field :nickname, autofocus: true, maxlength: "6" ,placeholder: "ユーザー名"
+      = f.label :新規ユーザー名
+      = f.text_field :nickname, autofocus: true, maxlength: "10" ,placeholder: "ユーザー名"
     .field
-      = f.label :メールアドレス
+      = f.label :新規メールアドレス
       = f.email_field :email, autofocus: true, autocomplete: "email"
     - if devise_mapping.confirmable? && resource.pending_reconfirmation?
       div
         | Currently waiting confirmation for: 
         = resource.unconfirmed_email
     .field
-      = f.label :パスワード
+      = f.label :新規パスワード
       = f.password_field :password, autocomplete: "new-password"
     p
       - if @minimum_password_length
         em
-          | (
+          | (パスワードは
           = @minimum_password_length
-          |  文字以上&変更しない場合は空白のままにします）
+          |  文字以上&パスワードを変更しない場合は空白のままにします）
     .field
-      = f.label :パスワード確認
+      = f.label :新規パスワード確認
       = f.password_field :password_confirmation, autocomplete: "new-password"
     .field
       = f.label :現在のパスワード
