時間表記修正

--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -13,7 +13,7 @@
         .txt__name
           = comment.user.nickname
         .txt__date
-          = comment.created_at.to_s
+          = comment.created_at.strftime("%Y-%m-%d %H:%M")
       .comment
         .like-link id="like-link-#{comment.id}"
           = render 'likes/like', comment: comment
