--- a/app/views/likes/_like.html.slim
+++ b/app/views/likes/_like.html.slim
@@ -1,5 +1,5 @@
 div class="#{comment_change(comment.likes_count)}"
-  = comment.comment
+  = safe_join(comment.comment.split("\n"), tag(:br))
   br
   = image_tag "#{comment.image}" if comment.image.present?
   br
