--- a/app/views/videolikes/_like.html.slim
+++ b/app/views/videolikes/_like.html.slim
@@ -1,5 +1,5 @@
 div class="#{videocomment_change(videocomment.likes_count)}"
-  = videocomment.comment
+  = safe_join(videocomment.comment.split("\n"), tag(:br))
   br
   - if current_user.videolikes.find_by(videocomment_id: videocomment.id)
     = link_to videounlike_path(videocomment.id), method: :delete, remote: true do
