--- a/app/views/videos/_videos.html.slim
+++ b/app/views/videos/_videos.html.slim
@@ -12,5 +12,5 @@
             .video-content__bottom__right__title
               = link_to video.title, video_path(video.id)
             .video-content__bottom__right__views-date
-              | #{video.created_at}
+              | #{video.created_at.strftime("%Y-%m-%d %H:%M")}
   = paginate(@videos)
