JavaScript機能停止対策
TurbolinksによるJavaScript機能停止の対策

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,7 +1,7 @@
 header
   .left-bar
     .left-bar__title
-      = link_to root_path
+      = link_to root_path, method: :get
         = image_tag "favicon.ico"
         p WhiteWonderWall
   .right-bar
