トップページレイアウト修正

--- a/app/assets/stylesheets/_mainpage.scss
+++ b/app/assets/stylesheets/_mainpage.scss
@@ -7,7 +7,7 @@
   background-size:  cover;
   padding-top: 50px;
   h1{
-    font-size: 72px;
+    font-size: 108px;
     font-family: "ＭＳ ゴシック";
     padding: 10px 00px 50px 00px;
   }
@@ -20,7 +20,7 @@
     height: 50px;
     border-radius: 10px;
     padding: 4px 5px 0px 10px;
-    border: 10px outset #4781ff;
+    border: 5px outset #c5c5c5;
     margin-bottom: 30px;
   }
 }
