--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -1,7 +1,7 @@
 header {
   height: 50px;
   width: 100%;
-  background: linear-gradient(rgb(18, 255, 251), rgb(36, 36, 36));
+  background: black;
   display: flex;
   justify-content: space-between;
   line-height: 50px;
